CHANGES:

01/14/2013
- add a DOCMaker v4 parser

01/10/2013
- update FullWrite* parser to detect more paragraph properties (to be continued),
- update Apple/ClarisWorks, FullWrite*, MindWrite, Microsoft Works parsers to use the new font properties,

01/06/2013:
- create a class MWAWColor to store color,
- begin to rewrite MWAWFont to add new properties 
  and update MacWrite*, WriteNow, WriterPlus parsers to use the new properties
- add MWAWFontSJISConverter to decode S-JIS encoding
  and update Claris/AppleWorks and LightWay Text to use it.
  Seems to works for the first parser ( ie. Google finds resulting words :-) )
  but not to the second parser ( ie. the SJIS-encoding is not even detected in
  my 2 Japanese's files :-~ )

01/01/2013: ----- version 1.5 ---------

12/30/2012
- add a first parser for Z-Write 1.3.

12/26/2012
- add a first parser for LightWayText 4.5 ( only Mac Format ), autoindent,
  macros not implemented.

12/21/2012
- add a first parser for Mariner Write Lite 1.6, other Mariner Write 1.* may
  be recognized ( ignoring some features : table, multi-columns, multi headers,
  ...) ; but I do not have enough file to test.

12/07/2012
- add a first parser for HanMac Word-K document ( 2.0.5 and 2.0.6 ),
  in debug mode, the HanMac Word-J (2.0.4) are also recognised and a few
  zones are parsed but no output is generated...

11/12/2012: ----- version 1.4 ---------

11/12/2012
- try to improve a little the claris/appleworks parser
  ( use vertical descent to add AppleWorks v6 char attachment,
    use border and background color parameters when building table
    cells and some frames )

11/01/2012
- add a OSX specific tools: mwawFile to allow to find the type of old files
  ( Note: this tools using specific OSX calls deprecated in 10.8 can
    probably only compile for mac target 10.4<->10.7 )

10/26/2012
- minor improvements on the Nisus Parser + find some Nisus 3.4<->6.5 files
  and check that the parser can read them.

10/21/2012: